Changed the line wrap code to take care character width, contrituted by bratell@lysator.liu.se, bug 41453, r=akkana,nhotta.